--- a/custom_components/electricity_prices_dk/manifest.json
+++ b/custom_components/electricity_prices_dk/manifest.json
@@ -6,5 +6,5 @@
   "dependencies": [],
   "codeowners": ["@cmk2179"],
   "config_flow": true,
-  "requirements": ["beautifulsoup4", "aiohttp", "tzdata"]
+  "requirements": ["beautifulsoup4", "aiohttp", "tzdata", "awesomeversion"]
 }
